# oasis

./: .gitignore  .golangci.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  LICENSE-ID.md  README.md  agent.go  agent_deferred_test.go  agent_mcp_test.go  agent_suspend_test.go  agent_test.go  agentcore.go  agentcore_test.go  agentmemory.go  agentmemory_test.go  app.go  app_test.go  batch.go  benchmark.md  catalog.go  catalog_types_test.go  code.go  compaction.go  compaction_helpers.go  compaction_prompt.go  compaction_structured.go  compaction_structured_test.go  compaction_test.go  compaction_wiring_test.go  cosine.go  doc.go  errors.go  errors_test.go  frontend.go  go.mod  go.sum  (+85 more)
a2a/: e2e_test.go  push.go  push_test.go  server.go  server_send.go  server_test.go  types.go  types_test.go
agent/: agent.go  agent_misc_test.go  agent_test.go  agentcore.go  agentcore_test.go  aliases.go  compaction_wiring_test.go  compress.go  dispatch.go  dispatch_test.go  dispatch_ui_test.go  dynamic_tools_streaming_test.go  export_test.go  forwarder_test.go  handle.go  handle_test.go  hooks.go  hooks_test.go  inline_compactor.go  inline_compactor_test.go  integration_runoptions_test.go  interfaces.go  interfaces_test.go  iteration.go  lifecycle_subagent_test.go  lifecycle_test.go  llm.go  llm_test.go  loop.go  loop_bench_test.go  loop_compress_test.go  loop_test.go  memory_integration_test.go  middleware.go  middleware_test.go  object_stream.go  object_stream_test.go  persist_interrupted_test.go  processor_test.go  prompt_cache_test.go  (+48 more)
code/: callback.go  http.go  http_test.go  opensandbox.go  opensandbox_api.go  opensandbox_opts.go  opensandbox_test.go  options.go  os_prelude.js  prelude.py  subprocess.go  subprocess_test.go
compaction/: compaction_test.go  doc.go  errors.go  example_test.go  go.mod  helpers.go  prompt.go  structured.go  structured_test.go
core/: agent.go  agent_accessors_test.go  agent_scores_test.go  agent_trace_test.go  catalog.go  catalog_types_test.go  checkpoint.go  coerce.go  coerce_test.go  compactor.go  compactor_test.go  doc.go  erase.go  erase_test.go  eval.go  eval_test.go  func.go  func_test.go  helpers_test.go  leaf_test.go  math.go  memory.go  partial_json.go  partial_json_test.go  persistence.go  processor.go  provider_helpers.go  ptr.go  retry.go  retry_test.go  runopt.go  runopt_test.go  runusage.go  runusage_test.go  sandbox.go  sandbox_test.go  schema.go  schema_test.go  score_store_test.go  source.go  (+22 more)
crates/oasis-brain/: Cargo.toml
crates/oasis-brain/src/: brain.rs  intent.rs  lib.rs  memory.rs  scheduler.rs  search.rs  util.rs
crates/oasis-brain/src/agent/: mod.rs
crates/oasis-brain/src/brain/: action.rs  chat.rs  ingest.rs  lifecycle.rs  mod.rs  router.rs  scheduling.rs  storage.rs
crates/oasis-brain/src/service/: llm.rs  memory.rs  mod.rs  scheduler.rs  skills.rs  store.rs
crates/oasis-brain/src/service/ingest/: chunker.rs  extractor.rs  pipeline.rs
crates/oasis-brain/src/service/search/: fetch.rs  google.rs  mod.rs  types.rs
crates/oasis-brain/src/tool/: calendar.rs  file.rs  gmail.rs  http.rs  knowledge.rs  linear.rs  memory_tool.rs  mod.rs  schedule.rs  search.rs  shell.rs  skill.rs  task.rs
crates/oasis-ingest/: Cargo.toml
crates/oasis-ingest/src/: chunker.rs  extractor.rs  lib.rs  pipeline.rs
crates/oasis-integrations/: Cargo.toml
crates/oasis-integrations/src/: http.rs  lib.rs
crates/oasis-integrations/src/google/: calendar.rs  gmail.rs  mod.rs  oauth.rs
crates/oasis-integrations/src/linear/: client.rs
crates/oasis-llm/: Cargo.toml
crates/oasis-llm/src/: anthropic.rs  gemini.rs  lib.rs  ollama.rs  openai.rs  provider.rs
crates/oasis-search/: Cargo.toml
crates/oasis-search/src/: search.rs
crates/oasis-telegram/: Cargo.toml
crates/oasis-telegram/src/: bot.rs  types.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  CONVENTIONS.md  ENGINEERING.md  PHILOSOPHY.md  embed.go  index.md
eval/: deterministic.go  deterministic_test.go  doc.go  judge.go  judge_test.go  judges.go  judges_test.go  prompts.go  run.go  run_test.go
guardrail/: cost.go  cost_test.go  doc.go  example_test.go  go.mod  guardrail.go  guardrail_test.go  internal.go  redaction.go  redaction_test.go  tokenbudget.go  tokenbudget_test.go
history/: history.go
ingest/: batch.go  checkpoint.go  chunker.go  chunker_markdown.go  chunker_markdown_test.go  chunker_semantic.go  chunker_semantic_test.go  chunker_test.go  contextual.go  contextual_test.go  crossdoc.go  crossdoc_test.go  extractor.go  extractor_csv.go  extractor_csv_test.go  extractor_docx.go  extractor_docx_test.go  extractor_json.go  extractor_json_test.go  extractor_pdf.go  extractor_pdf_test.go  extractor_test.go  go.mod  go.sum  graph.go  graph_test.go  image_embed.go  image_embed_test.go  ingest_batch.go  ingestor.go  ingestor_test.go  option.go  (+3 more)
(+528 files in other folders)
