[workspace]
members = [
    "crates/oasis-core",
    "crates/oasis-llm",
    "crates/oasis-telegram",
    "crates/oasis-brain",
]
resolver = "2"

[package]
name = "oasis"
version = "0.1.0"
edition = "2021"

[dependencies]
oasis-core = { path = "crates/oasis-core" }
oasis-brain = { path = "crates/oasis-brain" }
oasis-telegram = { path = "crates/oasis-telegram" }
libsql = "0.6"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
