[package]
name = "oasis-brain"
version = "0.1.0"
edition = "2021"

[dependencies]
oasis-core = { path = "../oasis-core" }
oasis-llm = { path = "../oasis-llm" }
oasis-vector = { path = "../oasis-vector" }
oasis-tasks = { path = "../oasis-tasks" }
oasis-ingest = { path = "../oasis-ingest" }
oasis-telegram = { path = "../oasis-telegram" }
oasis-memory = { path = "../oasis-memory" }
oasis-search = { path = "../oasis-search" }
oasis-tools = { path = "../oasis-tools" }
libsql = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
