[package]
name = "oasis-brain"
version = "0.1.0"
edition = "2021"

[dependencies]
oasis-core = { path = "../oasis-core" }
oasis-llm = { path = "../oasis-llm" }
oasis-telegram = { path = "../oasis-telegram" }
oasis-integrations = { path = "../oasis-integrations" }

# Dependencies from absorbed crates
libsql = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
chromiumoxide = { version = "0.8", default-features = false, features = ["tokio-runtime"] }
futures = "0.3"
readability-rust = "0.1.0"
async-trait = "0.1"
