[package]
name = "oasis-ingest"
version = "0.1.0"
edition = "2021"

[dependencies]
oasis-core = { path = "../oasis-core" }
oasis-llm = { path = "../oasis-llm" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
