[package]
name = "oasis-integrations"
version = "0.1.0"
edition = "2021"

[dependencies]
oasis-core = { path = "../oasis-core" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "sync"] }
axum = "0.8"
base64 = "0.22"
