[package]
name = "oasis-llm"
version = "0.1.0"
edition = "2021"

[dependencies]
oasis-core = { path = "../oasis-core" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }
