[package]
name = "oasis-telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
oasis-core = { path = "../oasis-core" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
pulldown-cmark = "0.12"
